# MCP-SERVER-PRO

./: README.md
mcp-server-pro/: .gitignore  README.md  pyproject.toml
mcp-server-pro/src/: config.py  server.py
mcp-server-pro/src/tools/: __init__.py  autonomy_tools.py  db_connector.py  excel_connector.py  gmail_connector.py  ide_connector.py  mcp_client.py  pinecone_connector.py
mcp-server-pro/src/utils/: logging_config.py
